# graph-algorithm-image-segmentation-GPGPU

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Plots.ipynb  README.md  README.txt  gaussian_filter.cpp  gaussian_filter.h  installation.md  main.cpp  segment.cpp  segment_all.sh  segment_image.cpp  segment_image.h  segment_wrapper
6_Advanced/segmentationTreeThrust/: segmentationTree.cu
RecMST-Duplicate/: CMakeLists.txt  Kernels.cu  RecMST.cu  scan.cu.h  scanKernel.cu
RecMST-Duplicate/cmake/: OpenCV.cmake
RecMST-Duplicate/data/: SampleGraph2.txt
RecMST-Duplicate/src/: Kernels.cu  OldMakeFileOld  Options.h  RecMST.cu  scan.cu.h  splitFuncs.h  splitKernel.cu
cmake/: OpenCV.cmake
comparetool/: CMakeLists.txt
comparetool/src/: comparetool.cpp
data/Atomic Felzenszwalb/: cuda-mst-naive-new-fixed-K040-E1.csv  cuda-mst-naive-new-fixed-K080-E1.csv  cuda-mst-naive-new-fixed-K160-E1.csv  cuda-mst-naive-new-fixed-K320-E1.csv
data/CPU Baseline/: cpu-baseline-K040.csv  cpu-baseline-K080.csv  cpu-baseline-K160.csv  cpu-baseline-K320.csv  cpu-baseline-K640.csv
data/DPP Segmentaiton hierarchies/: rec-mst-new-S3.csv  rec-mst-new-S4.csv  rec-mst-new-S5.csv  rec-mst-new-S6.csv
data/DPP Superpixel Hierarchy/: dpp_superpixel_hierarchy-S4.csv
data/GPU Baseline/: gpu-baseline-S3.csv  gpu-baseline-S4.csv  gpu-baseline-S5.csv  gpu-baseline-S6.csv
data/Ground Up DPP Segmentation Hierarchies/: akanksha-final-S4.csv
datasets/performance/: README.txt
docs/: BVK_GPU.pseudo
fastmst_python/: graphvisualise.py  mst.py
felzenswalb/: CMakeLists.txt  gaussian_filter.cpp  gaussian_filter.h  main.cpp  segment_image.cpp  segment_image.h
felzenswalb_amory/: felzenswalb.py  graph.py  main.py
felzenswalb_python/: felzenswalb.py  felzenswalb_condition.py  felzenswalb_edge.py  main.py  mst.py  superpixel.py
performance_benchmark/: main.py
performance_benchmark/dataset/: README.txt
performance_benchmark/executables/cpu_baseline/: pnmfile.h  segment  segment-image.h  segment.cpp  segmented.ppm
performance_benchmark/executables/gpu_baseline/: segmentationTree.cu
performance_plots/: Plots.ipynb  main.py
performance_plots/bench_results/boruvka_fastmst/bench_results/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  oberhofen_5430_3054.csv  oberhofen_679_382.csv  oberhofen_7680_4320.csv  oberhofen_960_540.csv
performance_plots/bench_results/boruvka_fastmst/bench_results_partial/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  oberhofen_5430_3054.csv  oberhofen_679_382.csv  oberhofen_7680_4320.csv  oberhofen_960_540.csv
performance_plots/bench_results/cpu_baseline/bench_results/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  oberhofen_5430_3054.csv  oberhofen_679_382.csv  oberhofen_7680_4320.csv  oberhofen_960_540.csv
performance_plots/bench_results/cpu_baseline/bench_results_partial/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  oberhofen_5430_3054.csv  oberhofen_679_382.csv  oberhofen_7680_4320.csv  oberhofen_960_540.csv
performance_plots/bench_results/cuda_mst_naive/bench_results/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  oberhofen_5430_3054.csv  oberhofen_679_382.csv  oberhofen_7680_4320.csv  oberhofen_960_540.csv
performance_plots/bench_results/cuda_mst_naive/bench_results_partial/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  oberhofen_5430_3054.csv  oberhofen_679_382.csv  oberhofen_7680_4320.csv  oberhofen_960_540.csv
performance_plots/bench_results/cuda_mst_naive_dynpar/bench_results/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  oberhofen_5430_3054.csv  oberhofen_679_382.csv  oberhofen_7680_4320.csv  oberhofen_960_540.csv
performance_plots/bench_results/cuda_mst_naive_dynpar/bench_results_partial/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  oberhofen_5430_3054.csv  oberhofen_679_382.csv  oberhofen_7680_4320.csv  oberhofen_960_540.csv
performance_plots/bench_results/fastmst_segment/bench_results/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  oberhofen_5430_3054.csv  oberhofen_679_382.csv  oberhofen_7680_4320.csv  oberhofen_960_540.csv
performance_plots/bench_results/fastmst_segment/bench_results_partial/: bench_info.txt  oberhofen_1357_763.csv  oberhofen_1920_1080.csv  oberhofen_240_135.csv  oberhofen_2715_1527.csv  oberhofen_339_191.csv  oberhofen_3840_2160.csv  oberhofen_480_270.csv  (+4 more)
quality plots/: Untitled.ipynb
quality plots/bench_results/: fastmst-5-forest.csv  fastmst-5-orig.csv  fastmst-5-sobel.csv
results/: README.md
scripts/: benchmark_segments.py  compare_segments.py  convert_bsds.py  felz_skimage.py  felz_wrapper  fill_black.py  seg_wrapper
sobel/: CMakeLists.txt  main.cpp
src/: CreateGraph.cu  CreateGraph.h  FastMST.cu  FastMST.h  Main.cpp  Main.cu  Options.h  RecolorImage.cu  RecolorImage.h  custom_types.h  graph.h  mst.cu  mst.h  sort.h
structured-forest-edge/: CMakeLists.txt  main.cpp
(+51 files in other folders)
